--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -32,6 +32,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Installing surge
-        run: npm intsall --global surge
+        run: npm install --global surge
       - name: Deploying using surge 
         run: surge ./ bootcamp2020govindaclass1.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
